force-app/main/default/objects/Layout_Mapping__c/Layout_Mapping__c.object-meta.xml
<CustomObject>
    <label>Layout Mapping</label>
    <nameField>
        <displayFormat>LM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layout Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>