force-app/main/default/objects/Layout_Mapping__c/fields/Layout_Id__c.field-meta.xml
<CustomField>
    <fullName>Layout_Id__c</fullName>
    <externalId>true</externalId>
    <label>Layout Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>