force-app/main/default/objects/Layout_Mapping__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>20</length>
    <type>Text</type>
</CustomField>